<resources>
    <string name="app_name">JdfMonitorAndroid</string>
    <string name="title_activity_home_page_fragment">HomePage</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job_tab_1">设备监控</string>
    <string name="job_tab_2">视频监控</string>
    <string name="job_tab_3">机房巡检</string>
    <string name="job_tab_4">排班计划</string>
    <string name="main_tab_1">首页</string>
    <string name="main_tab_2">工作</string>
    <string name="main_tab_3">任务</string>
    <string name="main_tab_4">仓管</string>
    <string name="main_tab_5">资讯</string>
</resources>
